crates/ty_python_semantic/resources/mdtest/snapshots/issubclass.md_-_Narrowing_for_`issub…_-_`classinfo`_is_an_in…_(7bb66a0f412caac1).snap
---
source: crates/ty_test/src/lib.rs
assertion_line: 621
expression: snapshot
---

---
mdtest name: issubclass.md - Narrowing for `issubclass` checks - `classinfo` is an invalid PEP-604 union of types
mdtest path: crates/ty_python_semantic/resources/mdtest/narrow/issubclass.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Literal
 2 | 
 3 | def _(x: type[int | list | bytes]):
 4 |     # error: [invalid-argument-type]
 5 |     if issubclass(x, int | list[int]):
 6 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
 7 |     # error: [invalid-argument-type]
 8 |     elif isinstance(x, (list[int] | bytes, int)):
 9 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
10 |     # error: [invalid-argument-type]
11 |     elif isinstance(x, (int, str | Literal[42])):
12 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
13 |     # error: [invalid-argument-type]
14 |     elif isinstance(x, (int, (str, (bytes, memoryview | Literal[42])))):
15 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
16 |     else:
17 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
18 | def _(x: type[int | list | bytes]):
19 |     # error: [invalid-argument-type]
20 |     if issubclass(x, (int, list[int] | bytes)):
21 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
22 |     else:
23 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
24 | def _(x: type[int | list | bytes]):
25 |     # error: [invalid-argument-type]
26 |     if issubclass(x, (int, (str, list[int] | bytes))):
27 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
28 |     else:
29 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
30 | classes = (int, list[int] | bytes)
31 | 
32 | def _(x: type[int | list | bytes]):
33 |     # error: [invalid-argument-type]
34 |     if issubclass(x, classes):
35 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
36 |     else:
37 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
```

# Diagnostics

```
error[invalid-argument-type]: Invalid second argument to `issubclass`
 --> src/mdtest_snippet.py:5:8
  |
3 | def _(x: type[int | list | bytes]):
4 |     # error: [invalid-argument-type]
5 |     if issubclass(x, int | list[int]):
  |        ^^^^^^^^^^^^^^---------------^
  |                      |
  |                      This `UnionType` instance contains non-class elements
6 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
7 |     # error: [invalid-argument-type]
  |
info: A `UnionType` instance can only be used as the second argument to `issubclass` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:8:10
   |
 6 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
 7 |     # error: [invalid-argument-type]
 8 |     elif isinstance(x, (list[int] | bytes, int)):
   |          ^^^^^^^^^^^^^^^-----------------^^^^^^^
   |                         |
   |                         This `UnionType` instance contains non-class elements
 9 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
10 |     # error: [invalid-argument-type]
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:11:10
   |
 9 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
10 |     # error: [invalid-argument-type]
11 |     elif isinstance(x, (int, str | Literal[42])):
   |          ^^^^^^^^^^^^^^^^^^^^-----------------^^
   |                              |
   |                              This `UnionType` instance contains non-class elements
12 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
13 |     # error: [invalid-argument-type]
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<special-form 'Literal[42]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `isinstance`
  --> src/mdtest_snippet.py:14:10
   |
12 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
13 |     # error: [invalid-argument-type]
14 |     elif isinstance(x, (int, (str, (bytes, memoryview | Literal[42])))):
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^------------------------^^^^
   |                                            |
   |                                            This `UnionType` instance contains non-class elements
15 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
16 |     else:
   |
info: A `UnionType` instance can only be used as the second argument to `isinstance` if all elements are class objects
info: Element `<special-form 'Literal[42]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `issubclass`
  --> src/mdtest_snippet.py:20:8
   |
18 | def _(x: type[int | list | bytes]):
19 |     # error: [invalid-argument-type]
20 |     if issubclass(x, (int, list[int] | bytes)):
   |        ^^^^^^^^^^^^^^^^^^^^-----------------^^
   |                            |
   |                            This `UnionType` instance contains non-class elements
21 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
22 |     else:
   |
info: A `UnionType` instance can only be used as the second argument to `issubclass` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `issubclass`
  --> src/mdtest_snippet.py:26:8
   |
24 | def _(x: type[int | list | bytes]):
25 |     # error: [invalid-argument-type]
26 |     if issubclass(x, (int, (str, list[int] | bytes))):
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^-----------------^^^
   |                                  |
   |                                  This `UnionType` instance contains non-class elements
27 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
28 |     else:
   |
info: A `UnionType` instance can only be used as the second argument to `issubclass` if all elements are class objects
info: Element `<class 'list[int]'>` in the union is not a class object
info: rule `invalid-argument-type` is enabled by default

```

```
error[invalid-argument-type]: Invalid second argument to `issubclass`
  --> src/mdtest_snippet.py:34:8
   |
32 | def _(x: type[int | list | bytes]):
33 |     # error: [invalid-argument-type]
34 |     if issubclass(x, classes):
   |        ^^^^^^^^^^^^^^^^^^^^^^
35 |         reveal_type(x)  # revealed: type[int | list[Unknown] | bytes]
36 |     else:
   |
info: A `UnionType` instance can only be used as the second argument to `issubclass` if all elements are class objects
info: Element `<class 'list[int]'>` in the union `list[int] | bytes` is not a class object
info: rule `invalid-argument-type` is enabled by default

```
